--- a/arch/arm64/configs/tissot-perf_defconfig
+++ b/arch/arm64/configs/tissot-perf_defconfig
@@ -1660,6 +1660,7 @@ CONFIG_WIL6210_ISR_COR=y
 CONFIG_WIL6210_TRACING=y
 # CONFIG_WIL6210_WRITE_IOCTL is not set
 CONFIG_WIL6210_PLATFORM_MSM=y
+CONFIG_PRONTO_WLAN=m
 # CONFIG_BRCMFMAC is not set
 # CONFIG_HOSTAP is not set
 # CONFIG_IPW2100 is not set
@@ -3865,6 +3866,7 @@ CONFIG_MSM_PIL=y
 CONFIG_MSM_PIL_SSR_GENERIC=y
 # CONFIG_MSM_PIL_SSR_BG is not set
 CONFIG_MSM_PIL_MSS_QDSP6V5=y
+CONFIG_MSM_PIL_PRONTO=y
 # CONFIG_MSM_SHARED_HEAP_ACCESS is not set
 # CONFIG_TRACER_PKT is not set
 CONFIG_MSM_SECURE_BUFFER=y
